@@ -1,3 +1,8 @@
+2014-09-02 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	Access dictionary in standard way.
+
 2014-09-01 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
